--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,5 @@
+@import './design.scss';
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -8,10 +10,24 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  color: #{$--color-text-1};
+}
+
+a {
+  text-decoration: none;
+  color: unset;
 }
 
 html,
-body {
+body,
+#root {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#root {
+  background-color: #{$--color-bg-1};
 }
