--- a/src/components/list/component/item/index.scss
+++ b/src/components/list/component/item/index.scss
@@ -10,6 +10,7 @@
   border-bottom: 2px solid #{$--color-bg-5};
   overflow: hidden;
   flex: 0 0 auto;
+  text-overflow: ellipsis;
 
   &.done {
     font-style: italic;
