--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   #{&}-title {
+    min-width: #{$width};
     font-size: 50px;
     font-weight: 700;
     text-shadow: 0 0 5px #{$--color-primary};
