--- a/src/pages/list/index.scss
+++ b/src/pages/list/index.scss
@@ -2,7 +2,7 @@
 @import '@/styles/design.scss';
 
 .list {
-  width: 800px;
+  width: #{$width};
   height: 500px;
   border: 2px solid #{$--color-bg-5};
   padding: 5px;
