--- a/src/components/list/component/item/index.scss
+++ b/src/components/list/component/item/index.scss
@@ -9,6 +9,7 @@
   text-align: center;
   border-bottom: 2px solid #{$--color-bg-5};
   overflow: hidden;
+  text-overflow: ellipsis;
   flex: 0 0 auto;
 
   &.done {
